--- a/assets/scss/_bootstrap-theming.scss
+++ b/assets/scss/_bootstrap-theming.scss
@@ -57,15 +57,26 @@
   float: none;
 }
 .panel {
-  background-color: darken($color-light, 5%);
+  background-color: darken($color-light, 7%);
   border: none;
-}
-// .panel-info {
-//   background-color: $color-accent;
-// }
-
-.panel-info >.panel-heading {
-  color: $color-light;
-  background-color: $color-accent;
-  border-color: $color-accent;
+  
+  &:not(:last-of-type) {
+    margin-bottom: $gap * 2;
+  }
+  
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+  
+  &-body {
+    border: 1px solid $color-gray;
+  }
+  
+  > .panel-heading {
+    color: $color-light;
+    background-color: $color-accent;
+    border-color: $color-accent;
+    font-size: 1.2rem;
+    letter-spacing: 0.1em;
+  }
 }
