--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,14 +40,28 @@
 }
 
 .panel {
-  background-color: #f2f2f2;
+  background-color: #ededed;
   border: none;
 }
 
-.panel-info > .panel-heading {
+.panel:not(:last-of-type) {
+  margin-bottom: 30px;
+}
+
+.panel:last-of-type {
+  margin-bottom: 0;
+}
+
+.panel-body {
+  border: 1px solid #dddddd;
+}
+
+.panel > .panel-heading {
   color: #ffffff;
   background-color: #df8a13;
   border-color: #df8a13;
+  font-size: 1.2rem;
+  letter-spacing: 0.1em;
 }
 
 html {
@@ -88,6 +102,15 @@ a:hover, a:focus {
   color: #ffffff;
   font-size: 1.15rem;
   letter-spacing: 0.2em;
+}
+
+.vertical-slider {
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.vertical-slider__img {
+  width: 100%;
 }
 
 @media (min-width: 576px) {
