--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -1,3 +1,10 @@
 .left-sidebar {
   @extend %margin-bottom-lg;
 }
+.vertical-slider {
+  border-radius: 4px;
+  overflow: hidden;
+  &__img {
+    width: 100%;
+  }
+}
