--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -8,3 +8,22 @@
     width: 100%;
   }
 }
+.user-login {
+  position: relative;
+  &__tabs {
+    position: absolute;
+    top: 0;
+    right: $gap;
+    border: none;
+    margin-right: -5px;
+  }
+  a {
+    padding: 14px 5px 12px !important;
+    border: none !important;
+    background-color: transparent !important;
+    color: $color-gray;
+  }
+  .active a {
+    color: $color-light !important;
+  }
+}
