--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -27,3 +27,57 @@
     color: $color-light !important;
   }
 }
+.site-news {
+  $image-size: 75px;
+  $local-gap: 10px;
+  $image-size-with-padding: $image-size + $local-gap;
+  
+  &-item {
+    clear: both;
+    position: relative;
+    
+    &:not(:last-child) {
+      min-height: $image-size-with-padding;
+      margin-bottom: $gap;
+      
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: -5px;
+        width: calc(100% - #{$image-size-with-padding});
+        height: 1px;
+        background-color: $color-gray;
+      }
+    }
+    &:hover {
+      a {
+        color: $color-accent;
+      }
+      .thumbnail {
+        background-color: $color-accent;
+        border-color: $color-accent;
+      }
+    }       
+    &__thumbnail {
+      float: left;
+      margin: 0 $local-gap $local-gap 0;
+      width: $image-size;
+    }
+    &__image {
+      width: 100%;
+    }
+    &__title {
+      margin-bottom: $local-gap;
+    }
+    &__link {
+      @include block-shortener(1rem, 1.5, 50px, 2);
+      transition: color 0.25s;
+    }
+    &__date {
+      text-align: right;
+      color: darken($color-gray, 30%);
+      font-size: 0.8rem;
+    }
+  }
+}
