--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -81,3 +81,48 @@
     }
   }
 }
+.top-films {
+  &__body {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  
+  &__list {
+    margin-bottom: 0;
+  }
+  
+  &__item {
+    margin-right: -1px;
+    margin-left: -1px;
+    background-color: transparent;
+    color: $color-primary !important;
+    padding-right: 55px;
+    
+    &:hover,
+    &:focus {
+      background-color: $color-accent !important;
+      border-color: $color-accent;
+      color: $color-light !important;
+      
+      .badge {
+        background-color: $color-dark;
+      }
+    }
+    
+    &:first-child {
+      border-radius: 0;
+      border-top: none;
+    }
+    
+    &:last-child {
+      border-radius: 0;
+      border-bottom: none;
+    }
+  }
+  &__badge {
+    position: absolute;
+    top: 50%;
+    right: $gap;
+    transform: translateY(-50%);
+  }
+}
