--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -13,3 +13,8 @@ a {
     text-decoration: none;
   }
 }
+h1 {
+  font-family: $font-header;
+  font-size: 3rem;
+  margin: -($gap / 3 * 2) 0 1em 0;
+}
