--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,3 +1,19 @@
 .main {
   @extend %margin-bottom-lg;
 }
+.new-films {
+  &-row {
+    margin-left: -$gap / 2;
+    margin-right: -$gap / 2;
+    margin-bottom: -$gap;
+  }
+  &-item {
+    padding-left: $gap / 2;
+    padding-right: $gap / 2;
+    margin-bottom: $gap;
+    
+    &__thumbnail {
+      margin-bottom: 0;
+    }
+  }
+}
