--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,46 @@ h1 {
   margin: -10px 0 1em 0;
 }
 
+h1::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3.2px;
+  background-color: rgba(240, 173, 79, 0.7);
+  margin: 0.85em 0 0 15px;
+}
+
+h2 {
+  font-family: "PT Serif", serif;
+  font-size: 2.5rem;
+  margin: 60px 0 45px 45px;
+}
+
+h2::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3.2px;
+  background-color: rgba(240, 173, 79, 0.7);
+  margin: 0.85em 0 0 15px;
+}
+
+h2::before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 3.2px;
+  left: 0;
+  margin: 0.25em 0 0 0;
+  background-color: rgba(240, 173, 79, 0.7);
+}
+
+h3 {
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
 .header-logo {
   padding: 100px 0;
   text-align: center;
@@ -121,20 +161,100 @@ h1 {
   letter-spacing: 0.2em;
 }
 
-.new-films-row {
+.new-films,
+.top-week {
+  overflow: hidden;
+  position: relative;
+}
+
+.new-films-row,
+.top-week-row {
   margin-left: -7.5px;
   margin-right: -7.5px;
   margin-bottom: -15px;
 }
 
-.new-films-item {
+.new-films-item,
+.top-week-item {
   padding-left: 7.5px;
   padding-right: 7.5px;
   margin-bottom: 15px;
 }
 
-.new-films-item__thumbnail {
+.new-films-item__thumbnail,
+.top-week-item__thumbnail {
   margin-bottom: 0;
+  -webkit-transition: background-color 0.25s;
+  -o-transition: background-color 0.25s;
+  transition: background-color 0.25s;
+}
+
+.new-films-item__thumbnail:hover, .new-films-item__thumbnail:focus,
+.top-week-item__thumbnail:hover,
+.top-week-item__thumbnail:focus {
+  background-color: #df8a13;
+}
+
+.new-films-item__thumbnail:hover .new-films-item__title, .new-films-item__thumbnail:focus .new-films-item__title,
+.top-week-item__thumbnail:hover .new-films-item__title,
+.top-week-item__thumbnail:focus .new-films-item__title {
+  color: #ffffff;
+}
+
+.new-films-item__title,
+.top-week-item__title {
+  margin-top: 5px;
+  margin-bottom: 0;
+  -webkit-transition: color 0.25s;
+  -o-transition: color 0.25s;
+  transition: color 0.25s;
+}
+
+.film-news {
+  overflow: hidden;
+  position: relative;
+}
+
+.film-news-item__title {
+  font-size: 1.5rem;
+  text-align: left;
+  font-weight: 400;
+}
+
+.film-news-item__thumbnail {
+  margin-bottom: 0;
+  -webkit-transition: background-color 0.25s;
+  -o-transition: background-color 0.25s;
+  transition: background-color 0.25s;
+}
+
+.film-news-item__img {
+  width: 100%;
+}
+
+.film-news-item__about {
+  text-align: justify;
+}
+
+.film-news-item__btn {
+  float: right;
+  margin-right: 15px;
+  margin-bottom: 30px;
+}
+
+.film-news-item:hover a, .film-news-item:focus a {
+  color: #df8a13;
+}
+
+.film-news-item:hover .thumbnail, .film-news-item:focus .thumbnail {
+  background-color: #f0ad4e;
+  border-color: #f0ad4e;
+}
+
+.film-news-item:hover .btn, .film-news-item:focus .btn {
+  color: #ffffff;
+  background-color: #df8a13;
+  border-color: #df8a13;
 }
 
 .vertical-slider {
