--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -17,4 +17,42 @@ h1 {
   font-family: $font-header;
   font-size: 3rem;
   margin: -($gap / 3 * 2) 0 1em 0;
+  
+  &::after {
+    content: "";
+    position: absolute;
+      width: 100%;
+      height: 3.2px;
+      background-color: rgba(240, 173, 79, 0.7);;
+      margin: 0.85em 0 0 $gap;
+  }
+}
+h2 {
+  font-family: $font-header;
+  font-size: 2.5rem;
+  margin: 60px 0 45px 45px;
+  
+  &::after {
+    content: "";
+    position: absolute;
+      width: 100%;
+      height: 3.2px;
+      background-color: rgba(240, 173, 79, 0.7);;
+      margin: 0.85em 0 0 $gap;
+  }
+  
+  &::before {
+    content: "";
+    position: absolute;
+      width: 30px;
+      height: 3.2px;
+      left: 0;
+      margin: 0.25em 0 0 0;
+      background-color: rgba(240, 173, 79, 0.7);;
+  }
+}
+h3 {
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
 }
