--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,13 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  font-size: 1.125rem;
+  color: #ffffff !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .header-logo {
   padding: 100px 0;
   text-align: center;
@@ -238,7 +245,6 @@ h3 {
 
 .film-news-item__btn {
   float: right;
-  margin-right: 15px;
   margin-bottom: 30px;
 }
 
@@ -395,6 +401,39 @@ h3 {
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+.footer {
+  background-color: #232323;
+}
+
+.footer-group {
+  margin-bottom: 30px;
+  margin-top: 45px;
+}
+
+.footer-group__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-group__link {
+  color: #737373;
+  font-weight: 100;
+}
+
+.footer-group__link:hover, .footer-group__link:focus {
+  color: #ffffff;
+}
+
+.footer__main {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.footer__main strong {
+  color: #ffffff;
 }
 
 @media (min-width: 576px) {
