--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -56,3 +56,10 @@ h3 {
     font-weight: bold;
     text-align: center;
 }
+h4 {
+  font-size: 1.125rem;
+  color: $color-light !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+}
