--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@
 .panel > .panel-heading {
   color: #ffffff;
   background-color: #df8a13;
-  border-color: #df8a13;
+  border: none;
   font-size: 1.2rem;
   letter-spacing: 0.1em;
 }
@@ -106,8 +106,6 @@ a:hover, a:focus {
 
 h1 {
   font-family: "PT Serif", serif;
-  font-size: 3rem;
-  margin: -7.5px 0 45px 0;
 }
 
 h1::after {
@@ -121,8 +119,6 @@ h1::after {
 
 h2 {
   font-family: "PT Serif", serif;
-  font-size: 2.5rem;
-  margin: 60px 0 45px 45px;
 }
 
 h2::after {
@@ -191,6 +187,11 @@ h4 {
   padding-left: 7.5px;
   padding-right: 7.5px;
   margin-bottom: 15px;
+}
+
+.new-films-item__img,
+.top-week-item__img {
+  width: 100%;
 }
 
 .new-films-item__thumbnail,
@@ -284,12 +285,20 @@ h4 {
   font-size: 0.8em;
 }
 
+.film-description__text {
+  margin-bottom: 0;
+}
+
 .user-review {
   margin-bottom: 30px;
 }
 
 .user-review-panel {
   margin-bottom: 15px;
+}
+
+.user-review-panel__text p {
+  margin-bottom: 0 !important;
 }
 
 .comment-film-form__btn {
@@ -444,9 +453,12 @@ h4 {
   background-color: #232323;
 }
 
-.footer-group {
-  margin-bottom: 30px;
+.footer-group-top {
   margin-top: 45px;
+}
+
+.footer-group-button {
+  margin-bottom: 30px;
 }
 
 .footer-group__list {
@@ -474,6 +486,14 @@ h4 {
 }
 
 @media (min-width: 576px) {
+  h1 {
+    font-size: 3rem;
+    margin: -7.5px 0 45px 0;
+  }
+  h2 {
+    font-size: 2.5rem;
+    margin: 60px 0 45px 45px;
+  }
   .header-logo__title {
     font-size: 3.5rem;
     letter-spacing: 0.33em;
@@ -493,6 +513,24 @@ h4 {
   }
 }
 
+@media (min-width: 992px) {
+  .footer-group-top {
+    margin-bottom: 30px;
+  }
+  .footer-group-button {
+    margin-top: 45px;
+  }
+}
+
+@media (max-width: 991.8px) {
+  .footer-group-top {
+    margin-bottom: 10px;
+  }
+  .footer-group-button {
+    margin-top: 0;
+  }
+}
+
 @media (max-width: 767.8px) {
   .navbar-inverse .navbar-nav > li > a {
     text-align: center;
@@ -506,6 +544,14 @@ h4 {
 }
 
 @media (max-width: 575.8px) {
+  h1 {
+    font-size: 2rem;
+    margin: 0 0 30px 0;
+  }
+  h2 {
+    font-size: 1.75rem;
+    margin: 45px 0 30px 45px;
+  }
   .header-logo__title {
     font-size: 2.5rem;
     letter-spacing: 0.2em;
