--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -15,8 +15,15 @@ a {
 }
 h1 {
   font-family: $font-header;
-  font-size: 3rem;
-  margin: -($gap / 2) 0 45px 0;
+  
+  @include xs-min {
+    font-size: 3rem;
+    margin: -($gap / 2) 0 ($gap * 3) 0;
+  }
+  @include xs {
+    font-size: 2rem;
+    margin: 0 0 ($gap * 2) 0;
+  }
   
   &::after {
     content: "";
@@ -29,8 +36,15 @@ h1 {
 }
 h2 {
   font-family: $font-header;
-  font-size: 2.5rem;
-  margin: 60px 0 45px 45px;
+  
+  @include xs-min {
+    font-size: 2.5rem;
+    margin: 60px 0 45px 45px;
+  }
+  @include xs {
+    font-size: 1.75rem;
+    margin: 45px 0 30px 45px;
+  }
   
   &::after {
     content: "";
