--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -23,6 +23,10 @@
 
 .film-description {
   @extend %limit-content;
+  
+  &__text {
+    margin-bottom: 0;
+  }
 }
 
 .user-review {
@@ -33,6 +37,12 @@
   
   &-panel {
     margin-bottom: $gap;
+    
+    &__text {
+      p {
+        margin-bottom: 0 !important;
+      }
+    }
   }
 }
 
