--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -15,7 +15,7 @@ a {
 }
 h1 {
   font-family: $font-header;
-  
+
   @include xs-min {
     font-size: 3rem;
     margin: -($gap / 2) 0 ($gap * 3) 0;
@@ -24,56 +24,43 @@ h1 {
     font-size: 2rem;
     margin: 0 0 ($gap * 2) 0;
   }
-  
+
   &::after {
-    content: "";
-    position: absolute;
-      width: 100%;
-      height: 3.2px;
-      background-color: rgba(240, 173, 79, 0.7);;
-      margin: 0.85em 0 0 $gap;
+    @include divider;
+    margin: 0.85em 0 0 $gap;
   }
 }
 h2 {
   font-family: $font-header;
-  
+
   @include xs-min {
     font-size: 2.5rem;
-    margin: 60px 0 45px 45px;
+    margin: ($gap * 4) 0 ($gap * 3) ($gap * 3);
   }
   @include xs {
     font-size: 1.75rem;
-    margin: 45px 0 30px 45px;
+    margin: ($gap * 3) 0 ($gap * 2) ($gap * 3);
   }
-  
+
   &::after {
-    content: "";
-    position: absolute;
-      width: 100%;
-      height: 3.2px;
-      background-color: rgba(240, 173, 79, 0.7);;
-      margin: 0.85em 0 0 $gap;
+    @include divider;
+    margin: 0.85em 0 0 $gap;
   }
-  
+
   &::before {
-    content: "";
-    position: absolute;
-      width: 30px;
-      height: 3.2px;
-      left: 0;
-      margin: 0.25em 0 0 0;
-      background-color: rgba(240, 173, 79, 0.7);;
+    @include divider(30px);
+    left: 0;
+    margin: 0.25em 0 0 0;
   }
 }
 h3 {
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
 }
 h4 {
   font-size: 1.125rem;
   color: $color-light !important;
   margin-top: 10px;
   margin-bottom: 10px;
-  
 }
